# Django_SBM

./: README.md  main.py  pyproject.toml
DemoBlog/: .env  manage.py  requirements.txt  vercel.json
DemoBlog/DemoBlog/: asgi.py  settings.py  urls.py  wsgi.py
DemoBlog/blog/: forms.py  models.py  urls.py  views.py
DemoBlog/blog/migrations/: 0001_initial.py  0002_alter_post_author.py
DemoBlog/blog/templates/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
DemoBlog/blog/templates/registration/: logged_out.html  login.html  signup.html
