[project]
name = "django-sbm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter-uv>=0.2.0",
    "django>=5.2.6",
    "django-browser-reload>=1.21.0",
    "django-tailwind>=4.2.0",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.10",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "unicorn>=2.1.4",
    "uvicorn>=0.37.0",
    "whitenoise>=6.11.0",
]
